Fix heading overflowing close icon space

--- a/src/components/BlogPostPopupModal/styles.module.less
+++ b/src/components/BlogPostPopupModal/styles.module.less
@@ -16,6 +16,7 @@
 
         @media(max-width: 425px) {
             font-size: 2rem;
+            padding-right: 34px;
         }
     }
 
